[package]
name = "raytracer"
version = "0.1.0"
authors = ["Matt Sorenson <matt@mattsorenson.com>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.1"
overload = "0.1.1"
nalgebra = "0.21.1"
rand = "0.7.3"
rand_distr = "0.2.2"
float-cmp = "0.8.0"
log = "0.4.8"
simple_logger = "1.6.0"
